[project]
name = "ella"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "diffusers>=0.36.0",
    "flash-linear-attention",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
flash-linear-attention = { git = "https://github.com/fla-org/flash-linear-attention" }
